added date and location

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <div class="clock">
+        <p class="datelocation"><span class="date"></span></p>
         <span class="clock-time"></span>
         <span class="clock-ampm"></span>
+        <p class="datelocation"><span class="location"></span></p>
     </div>
     <script src="script.js"></script>
 </body>
