Added location, current temp, condition icons, and condition to digital clock

--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Dashboard</title>
+    <script src="https://kit.fontawesome.com/2e833974a4.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="clock">
         <p class="datelocation"><span class="date"></span></p>
         <span class="clock-time"></span>
         <span class="clock-ampm"></span>
-        <p class="datelocation"><span class="location"></span></p>
+        <p class="datelocation"><span class="location"></span>&ensp;|&ensp;<span class="temp"></span>°C&ensp;|&ensp;<span class="condition-icon"></span>&ensp;<span class="conditions"></span></p>       
+        
     </div>
+    <script src="skycons.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
