Got initial version of 7-day forecast working

--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
         <p class="datelocation"><span class="date"></span></p>
         <span class="clock-time"></span>
         <span class="clock-ampm"></span>
-        <p class="datelocation"><span class="location"></span>&ensp;|&ensp;<span class="temp"></span>°C&ensp;|&ensp;<span class="condition-icon"></span>&ensp;<span class="conditions"></span></p>       
-        
+        <p class="datelocation"><span class="location"></span>&ensp;|&ensp;<span class="temp"></span>°C&ensp;|&ensp;<span class="condition-icon"></span>&ensp;<span class="conditions"></span></p>          
     </div>
-    <script src="skycons.js"></script>
+    <div class="row">
+        <div class="forecast-div">
+            <ul class="forecast-list">
+            </ul>
+        </div>
+
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
